--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-ultralytics
-opencv-python-headless
-pillow
-matplotlib
-numpy
-pandas
+streamlit==1.38.0
+ultralytics==8.3.0
+opencv-python-headless==4.10.0.84
+pillow==10.4.0
+matplotlib==3.9.2
+numpy==1.26.4
+pandas==2.2.2
