--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 streamlit==1.38.0
-ultralytics==8.3.0
+ultralytics==8.3.25
 opencv-python-headless==4.10.0.84
-pillow==10.4.0
-matplotlib==3.9.2
-numpy==1.26.4
-pandas==2.2.2
+pillow
+matplotlib
+numpy
+pandas
+torch>=2.0.0
+torchvision>=0.15.0
+pyyaml
+scipy
