--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 streamlit==1.38.0
 ultralytics==8.3.25
 opencv-python-headless==4.8.1.78
+numpy==1.24.4
 pillow
 matplotlib
-numpy
 pandas
 torch>=2.0.0
 torchvision>=0.15.0
