--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.38.0
 ultralytics==8.3.25
-opencv-python-headless==4.8.1.78
-numpy==1.24.4
+opencv-python-headless==4.9.0.80
+numpy>=1.26.0,<2.0.0
 pillow
 matplotlib
 pandas
